# Langgraph_practice

./: main.py  pyproject.toml
chroma_db/: chroma.sqlite3
single_agent/create_agent/: middleware.py
single_agent/rag_agent/: retriever.py  state.py  test.ipynb
single_agent/web_agent/: agent.py  agent_async.py  test.ipynb  test2.ipynb
test/: test.ipynb  test1.py  test2.ipynb  test2.py  test3.ipynb
