[project]
name = "python-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
]
